@@ -1,4 +1,4 @@
-GNU mailutils NEWS -- history of user-visible changes. 2019-01-22
+GNU mailutils NEWS -- history of user-visible changes. 2019-01-23
 Copyright (C) 2002-2019 Free Software Foundation, Inc.
 See the end of file for copying conditions.
 
@@ -7,6 +7,11 @@ Please send mailutils bug reports to <bug-mailutils@gnu.org>.
 Version 3.5.90 (git)
 
 * Fixes in the 'mail' utility
+
+** New mailbox notation @
+
+@ can be used with any command requring a mailbox name to refer to the
+file given with the -f option.
 
 ** showenvelope
 
